--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Salaries Histogram</title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
     <div class="wrapper">
+      <h3>Histogram of SF City Employee Base Salary Data, 2011 - 2014</h3>
       <svg></svg>
     </div>
     <script src="histogram.js"></script>
