Add source, even bars

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="wrapper">
       <h3>Histogram of SF City Employee Base Salary Data, 2011 - 2014</h3>
       <svg></svg>
+      <p>Source: Salary data was downloaded from <a href="https://www.kaggle.com/kaggle/sf-salaries">Kaggle's "SF Salaries" dataset</a>, and released under <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0: Public Domain License.</a></p>
     </div>
     <script src="histogram.js"></script>
   </body>
